removed background color and fixed () too much

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,11 +5,10 @@
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
+    background: none;
     transition-property: background-color;
     transition-duration: .5s;
+    color: #FFFFFF;
 }
 
 window#waybar.hidden {
